sviluppo interpolazione